--- a/hugo.yaml
+++ b/hugo.yaml
@@ -22,6 +22,10 @@ params:
     Title: "ryomayama.com"
     Content: "ryomayama's Blog"
 
+  socialIcons:
+    - name: GitHub
+      url: https://github.com/ryoma-yama
+
   # Posts
   showPostNavLinks: true
   showShareButtons: true
