--- a/hugo.yaml
+++ b/hugo.yaml
@@ -25,6 +25,8 @@ params:
   socialIcons:
     - name: GitHub
       url: https://github.com/ryoma-yama
+    - name: Bluesky
+      url: https://bsky.app/profile/ryomayama.com
 
   # Posts
   showPostNavLinks: true
