--- a/hugo.yaml
+++ b/hugo.yaml
@@ -22,6 +22,13 @@ params:
     Title: "ryomayama.com"
     Content: "ryomayama's Blog"
 
+  # Favicon
+  assets:
+    favicon: "/favicon.ico"
+    favicon16x16: "/favicon-16x16.png"
+    favicon32x32: "/favicon-32x32.png"
+    apple_touch_icon: "/apple-touch-icon.png"
+
   socialIcons:
     - name: GitHub
       url: https://github.com/ryoma-yama
